--- a/index.html
+++ b/index.html
@@ -3,14 +3,144 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Bus Seat Reservation</title>
+  <title>New Year</title>
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
-    <p>Hello World!</p>
-    <p>nothing else</p>
 
-  <script src="script.js"></script>
+<body>
+    <!-- Section #1 Start -->
+    <section class="bg-img">
+      <p>Happy New Year</p>
+      <h1>New Year Party <br> Celebration</h1>
+    </section>
+    <!-- Section #1 End -->
+
+
+    <!-- Section #2 Start -->
+    <section class="discount">
+      <h1>65% OFF</h1>
+      <p>OUR HOLIDAY DEALS ARE BETTER</p>
+      <h4>ALL CATEGORIES</h4>
+      <img src="image/New-Year-Photo.png" alt="">
+    </section>
+    <!-- Section #2 End -->
+
+    <!-- Section #3 Start -->
+    <section class="party">
+      <h1>Welcome to <br> midnight party</h1>
+      <p>Under the velvet sky adorned with twinkling stars, the midnight party unfolded in a symphony of laughter and rhythmic beats. Shadows danced in flickering candlelight as revelers embraced the magic of the witching hour, creating memories that whispered through the night.</p>
+      <a href="#">Join Now</a>
+    </section>
+    <!-- Section #3 End -->
+
+    <!-- Section #4 Start -->
+    <section class="announcement">
+      <div class="info-time">
+        <p><span>Place: </span>New Park Hotel</p>
+        <p><span>Date: </span>31 December Night 2023</p>
+        <p><span>Time: </span>Evening 7.30 pm to 12.30 am</p>
+      </div>
+      <a href="#">Join Now</a>
+    </section>
+    <!-- Section #4 End -->
+
+    <!-- Section #5 Start -->
+    <section class="coming-soon">
+      <div class="left-info">
+        <h5>NEW BEST OFFER</h5>
+        <h2>Coming Soon</h2>
+        <p>In the realm of enticing opportunities, the "BEST OFFER" emerges as a beacon of value, a promise of unparalleled advantages waiting to be seized. It's not just a deal; it's the epitome of excellence, an irresistible invitation to elevate your experience.</p>
+      </div>
+      <div class="center-img">
+        <img src="/image/Ellipse 1.png" alt="">
+      </div>
+      <div class="right-info">
+        <h3>2024</h3>
+        <p>In 2024, the tapestry of time unfurls with possibilities, weaving a narrative of innovation, resilience, and boundless potential on the canvas of a new era.</p>
+        <img src="/image/Group 96.png" alt="">
+      </div>
+    </section>
+    <!-- Section #5 End -->
+
+    <!-- Section #6 Start -->
+    <section class="portfolio">
+          <h5>THE BEST GIFTS</h5>
+          <h1>Our Awesome Portfolio</h1>
+          <p>"Our Awesome Portfolio" stands as a testament to our journey, showcasing a tapestry woven with dedication, innovation, and unwavering commitment to excellence. Each project within whispers tales of success, illustrating our prowess and passion in crafting remarkable solutions.</p>
+          <div class="projects-sample">
+            <img src="/image/Rectangle 3.png" alt="">
+            <img src="/image/Rectangle 4.png" alt="">
+            <img src="/image/Rectangle 5.png" alt="">
+            <img src="/image/Rectangle 6.png" alt="">
+            <img src="/image/Rectangle 7.png" alt="">
+            <img src="/image/Rectangle 8.png" alt="">
+          </div>
+    </section>
+  <!-- Section #7 End -->
+
+  <!-- Section #7 Start -->
+    <section class="subscribe">
+      <img src="/image/email.png" alt="email">
+      <h2>Subscribe Newsletter</h2>
+      <p>subscribe our newsletter to get exclusive offer & promotional updates.</p>
+      <form class="subscribe-form" action="">
+        <input type="email" name="email" id="email" placeholder="enter your email">
+        <input type="button" value="submit" class="subscribe-btn">
+      </form>
+    </section>
+<!-- Section #7 End -->
+
+ <!-- Section #7 Start -->
+    <section class="footer">
+        <div class="footer-content">
+          <div class="info">
+            <div class="col-left">
+              <p>44, Big Building Roosevelt Street <br>
+                Beach Gardens Florida 33410</p>
+            </div>
+            <div class="col-right">
+              <ul>
+                <li><img src="image/phone.png" alt=""><span>01793903202</span></li>
+                <li><img src="image/web.png" alt=""><span>akmdolar.dev</span></li>
+              </ul>
+            </div>
+          </div>
+          <hr>
+          <div class="social-list">
+            <ul>
+              <li>
+                <img src="/image/Facebook.png" alt="">
+              </li>
+              <li>
+                <img src="/image/Instagram.png" alt="">
+              </li>
+              <li>
+                <img src="/image/Twitter.png" alt="">
+              </li>
+              <li>
+                <img src="/image/Linkedin.png" alt="">
+              </li>
+            </ul>
+          </div>
+          <hr>
+          <div class="footer-bottom">
+            <div class="-bottom-info">
+              <div class="col-left">
+                <p>44, Big Building Roosevelt Street
+                  Beach Gardens Florida 33410</p>
+              </div>
+              <div class="col-right">
+                <p>Unsubscribe</p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+<!-- Section #7 End -->
+
 </body>
 </html>
